// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ViewModelField it renders a brand field that has data that is found 1`] = `
<nobr>
  find me
</nobr>
`;

exports[`ViewModelField it renders a brand field that has data that is not found 1`] = `
<nobr>
  Unknown Brand
</nobr>
`;

exports[`ViewModelField it renders a brand field that has no data 1`] = `<nobr />`;

exports[`ViewModelField it renders a checkbox field that has no data 1`] = `<nobr />`;

exports[`ViewModelField it renders a checkbox field that is false 1`] = `
<nobr>
  N
</nobr>
`;

exports[`ViewModelField it renders a checkbox field that is true 1`] = `
<nobr>
  Y
</nobr>
`;

exports[`ViewModelField it renders a country field that has data 1`] = `
<nobr>
  Germany
</nobr>
`;

exports[`ViewModelField it renders a country field that has no data 1`] = `<nobr />`;

exports[`ViewModelField it renders a currency field that has data 1`] = `
<nobr>
  £23.90
</nobr>
`;

exports[`ViewModelField it renders a currency field that has no data 1`] = `<nobr />`;

exports[`ViewModelField it renders a date field that has data 1`] = `
<nobr>
  12/20/2012, 3:00:00 AM
</nobr>
`;

exports[`ViewModelField it renders a date field that has no data 1`] = `<nobr />`;

exports[`ViewModelField it renders a part Type field that has no data 1`] = `<nobr />`;

exports[`ViewModelField it renders a part type field that has data that is found 1`] = `
<nobr>
  find me
</nobr>
`;

exports[`ViewModelField it renders a part type field that has data that is not found 1`] = `<nobr />`;

exports[`ViewModelField it renders a supplier field that has data that is found 1`] = `
<nobr>
  find me
</nobr>
`;

exports[`ViewModelField it renders a supplier field that has data that is not found 1`] = `<nobr />`;

exports[`ViewModelField it renders a supplier field that has no data 1`] = `<nobr />`;

exports[`ViewModelField it renders a text field that has data 1`] = `
<nobr>
  SHow text
</nobr>
`;

exports[`ViewModelField it renders a text field that has no data 1`] = `<nobr />`;
